testdata/golden/hir_borrow/invalid/spawn_escape.hir
error SEM3021 testdata/golden/hir_borrow/invalid/spawn_escape.sg:6:30 cannot send 'r' to a spawned task

== HIR ==
module 

async fn use_ref(x: &int [&]) -> nothing (id=1, sym=1134) {
}

borrow edges:
  <none>
events:
  <none>
move plan:
  L2269(x): MoveCopy (copy type)

async fn t() -> nothing (id=2, sym=1135) {
  let mut x: int [copy] = 1
  let r: &int [&] = (& x): &int
  let task: type#999 = spawn use_ref(r): type#999: type#999
  await(task): nothing
  return
}

borrow edges:
  L2271(r) (&) borrows L2270(x) at 0:87-89 scope=S5
events:
  borrow_start L2271(r) -> L2270(x) (&) at 0:87-89 scope=S5 note="B1"
  spawn_escape L2271(r) -> L2270(x) at 0:120-121 scope=S5 note="B1"
  borrow_end L2271(r) -> L2270(x) scope=S5 note="scope_end B1"
move plan:
  L2270(x): MoveCopy (copy type)
  L2271(r): MoveForbidden (spawn escape)
  L2272(task): MoveNeedsDrop (non-copy (drop))

